remove profain buttons and fix bottom nav covering bug

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -31,14 +31,8 @@ a {
   color: #000;
 }
 
-
-
-
-
-
-
-
-
-
+.container {
+  padding-bottom: 75px;
+}
 
 
